--- a/Runner/Base.lproj/Main.storyboard
+++ b/Runner/Base.lproj/Main.storyboard
@@ -71,6 +71,9 @@
                                     <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <connections>
+                                    <segue destination="Ysj-3G-dTT" kind="show" id="k72-Pw-g9h"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
@@ -326,7 +329,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="VY6-3P-csk" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1311" y="830"/>
+            <point key="canvasLocation" x="1212" y="843"/>
         </scene>
         <!--Badge Details View Controller-->
         <scene sceneID="ScF-LZ-fZg">
@@ -544,6 +547,61 @@
             </objects>
             <point key="canvasLocation" x="2046" y="64"/>
         </scene>
+        <!--Past Runs-->
+        <scene sceneID="YUO-7j-EHz">
+            <objects>
+                <tableViewController id="Ysj-3G-dTT" userLabel="Past Runs" customClass="PastRunsTableViewController" customModule="Runner" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="80" sectionHeaderHeight="22" sectionFooterHeight="22" id="QzE-xw-gph">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="PastRunsCell" id="0wG-Ke-Xiz" customClass="PastRunsCell" customModule="Runner" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="86" width="600" height="80"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="0wG-Ke-Xiz" id="dqO-Ly-8dH">
+                                    <rect key="frame" x="0.0" y="0.0" width="567" height="79"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Distance" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sbO-ud-kD6">
+                                            <rect key="frame" x="8" y="54" width="57" height="17"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                            <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Date" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="glf-dy-sPS">
+                                            <rect key="frame" x="8" y="8" width="41" height="22"/>
+                                            <fontDescription key="fontDescription" type="boldSystem" pointSize="18"/>
+                                            <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="sbO-ud-kD6" firstAttribute="leading" secondItem="dqO-Ly-8dH" secondAttribute="leadingMargin" id="F3i-aM-1e3"/>
+                                        <constraint firstItem="glf-dy-sPS" firstAttribute="leading" secondItem="dqO-Ly-8dH" secondAttribute="leadingMargin" id="duM-AG-8K7"/>
+                                        <constraint firstItem="sbO-ud-kD6" firstAttribute="bottom" secondItem="dqO-Ly-8dH" secondAttribute="bottomMargin" id="hXE-f5-zaj"/>
+                                        <constraint firstItem="glf-dy-sPS" firstAttribute="top" secondItem="dqO-Ly-8dH" secondAttribute="topMargin" id="uF3-hR-9h5"/>
+                                    </constraints>
+                                </tableViewCellContentView>
+                                <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                                <connections>
+                                    <outlet property="dateLabel" destination="glf-dy-sPS" id="2yV-Wd-XXD"/>
+                                    <outlet property="distanceLabel" destination="sbO-ud-kD6" id="Rko-vu-R1j"/>
+                                    <segue destination="oju-w4-une" kind="show" id="24z-qM-tp8"/>
+                                </connections>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="Ysj-3G-dTT" id="qcW-sL-k9l"/>
+                            <outlet property="delegate" destination="Ysj-3G-dTT" id="Xek-1q-3xq"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="Badges" id="Jxh-lN-2Ce"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="zFv-ED-oMD" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1311" y="-703"/>
+        </scene>
     </scenes>
     <resources>
         <image name="blue-btn" width="472" height="152"/>
@@ -553,4 +611,7 @@
         <image name="spaceship-gold" width="100" height="137"/>
         <image name="spaceship-silver" width="100" height="137"/>
     </resources>
+    <inferredMetricsTieBreakers>
+        <segue reference="24z-qM-tp8"/>
+    </inferredMetricsTieBreakers>
 </document>
